// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shape Fill - filter type should be the same size as the rectangle that draws the rotated object border 1`] = `
Object {
  "angle": -40,
  "backgroundColor": "",
  "cropX": -44.01372654341047,
  "cropY": -32.78115820908609,
  "crossOrigin": null,
  "fill": "rgb(0,0,0)",
  "fillRule": "nonzero",
  "filters": Array [
    Object {
      "blocksize": 20,
      "type": "Pixelate",
    },
  ],
  "flipX": false,
  "flipY": false,
  "globalCompositeOperation": "source-over",
  "height": 125.56,
  "left": 104.79,
  "opacity": 1,
  "originX": "center",
  "originY": "center",
  "paintFirst": "fill",
  "scaleX": 1,
  "scaleY": 1,
  "shadow": null,
  "skewX": 0,
  "skewY": 0,
  "src": "data:image/png;base64,00",
  "stroke": null,
  "strokeDashArray": null,
  "strokeDashOffset": 0,
  "strokeLineCap": "butt",
  "strokeLineJoin": "miter",
  "strokeMiterLimit": 4,
  "strokeUniform": false,
  "strokeWidth": 0,
  "top": 36.82,
  "type": "image",
  "version": "4.6.0",
  "visible": true,
  "width": 128.03,
}
`;

exports[`Shape Fill - filter type should give the expected result for shapes that go outside the top left area of the canvas 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "",
  "cropX": -50,
  "cropY": -5,
  "crossOrigin": null,
  "fill": "rgb(0,0,0)",
  "fillRule": "nonzero",
  "filters": Array [
    Object {
      "blocksize": 20,
      "type": "Pixelate",
    },
  ],
  "flipX": false,
  "flipY": false,
  "globalCompositeOperation": "source-over",
  "height": 70,
  "left": 150,
  "opacity": 1,
  "originX": "center",
  "originY": "center",
  "paintFirst": "fill",
  "scaleX": 1,
  "scaleY": 1,
  "shadow": null,
  "skewX": 0,
  "skewY": 0,
  "src": "data:image/png;base64,00",
  "stroke": null,
  "strokeDashArray": null,
  "strokeDashOffset": 0,
  "strokeLineCap": "butt",
  "strokeLineJoin": "miter",
  "strokeMiterLimit": 4,
  "strokeUniform": false,
  "strokeWidth": 0,
  "top": 40,
  "type": "image",
  "version": "4.6.0",
  "visible": true,
  "width": 200,
}
`;
